# lliurex-remote-installer-plasmoid

./: CMakeLists.txt  README.md
applets/: CMakeLists.txt
applets/remoteinstaller/: CMakeLists.txt
applets/remoteinstaller/knotifications5/: remoteinstaller.notifyrc
applets/remoteinstaller/knotifications6/: remoteinstaller.notifyrc
applets/remoteinstaller/package/: metadata.desktop  metadata.json
applets/remoteinstaller/package/contents/ui/: main.qml
applets/remoteinstaller/plugin/: RemoteInstallerWidget.cpp  RemoteInstallerWidget.h  RemoteInstallerWiget.cpp  plugin.cpp  plugin.h  qmldir
debian/: changelog  control  copyright  lliurex-remote-installer-indicator.dirs  lliurex-remote-installer-indicator.install  lliurex-remote-installer-indicator.postinst  rules
debian/.debhelper/lliurex-remote-installer-indicator/: dbgsym-build-ids
debian/.debhelper/lliurex-remote-installer-indicator/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/lliurex-remote-installer-indicator/dbgsym-root/usr/share/doc/: lliurex-remote-installer-indicator-dbgsym
po/: plasma_applet_org.kde.plasma.remoteinstaller.pot  update_translations.sh
po/ca/: plasma_applet_org.kde.plasma.remoteinstaller.po
po/ca@valencia/: plasma_applet_org.kde.plasma.remoteinstaller.po
po/en_GB/: plasma_applet_org.kde.plasma.remoteinstaller.po
po/es/: plasma_applet_org.kde.plasma.remoteinstaller.po
